--- a/src/index.htm
+++ b/src/index.htm
@@ -1,16 +1,77 @@
 <!doctype html>
 <html lang="en-US">
+
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <title>Coding Template</title>
+
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="bundle.css">
+  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 </head>
 
 <body>
-  <h1>Webpack - TypeScript - Scss</h1>
-  <h2>TypeScript Hello World</h2>  
-  <div id="content"></div>
-    
+
+  <div id="app">
+
+    <button v-on:click="GetAllStudents">Get</button>
+
+
+
+
+    <div class="table-responsive-sm">
+      <table class="table table-dark table-striped" v-if="students.length">
+        <th>Id</th>
+        <th>Navn</th>
+        <th>Alder</th>
+        <th>Slet</th>
+
+
+        <tr v-for="student in students">
+          <td>{{student.id}}</td>
+          <td>{{student.name}}</td>
+          <td>{{student.age}}</td>
+          <td>
+            <button v-on:click="DeleteStudent(student.id)">Slet</button>
+          </td>
+        </tr>
+      </table>
+    </div>
+
+    <div>
+      <button v-on:click="AddStudent">Lav student</button>
+      <input type="text" v-model="addForm.name" placeholder="Navn">
+      <input type="number" v-model.number="addForm.age" placeholder="Alder">
+    </div>
+
+    <div>
+
+      <button v-on:click="EditStudent">Rediger student</button>
+      <select @change="GetStudentById()" v-model.number="idToEdit">
+        <option v-for="student in students" >{{student.id}}</option>
+      </select>
+      <input type="text" v-model="editForm.name" placeholder="Navn">
+      <input type="number" v-model.number="editForm.age" placeholder="Alder">
+    </div>
+
+  </div>
+
+
   <script src="bundle.js"></script>
+
+
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+    integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+    crossorigin="anonymous"></script>
+
+
 </body>
+
 </html>
